Fix layout issues

--- a/src/components/Layout/Footer/Footer.css
+++ b/src/components/Layout/Footer/Footer.css
@@ -1,9 +1,6 @@
 .footer{
 	height: 20vh;
 	width: 100%;
-	position: relative;
-	top: 100vh;
-	/*background-color: black;*/
 }
 .foot1{
 	position: relative;
