--- a/src/components/Layout/SideBar/SideBar.scss
+++ b/src/components/Layout/SideBar/SideBar.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: -367px;
   height: 100vh;
-  z-index: 999;
+  z-index: 1500;
   color: #fff;
   transition: all 0.3s;
   background-color: $white;
